# SPH

./: .gitignore  CMakeLists.txt  SPH.cpp  SPOUT.cpp  a.out  header.h  parametrs_modeling.h  particles.h
a_launch_and_tasks/: launch.txt  task.txt
headers/: DISL.h  EOS.h  header.h  parametrs.h  parametrs_modeling.h  particle.h  particles.h
source/: DISL.cpp  DISLOC.cpp  EOS.cpp  INIT.cpp  MOVE.cpp  NLIST.cpp  SPH.cpp  SPOUT.cpp
